--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="tripBooked">%1$d trip(s) has(have) been booked 🚀🚀</string>
     <string name="tripCancelled">A trip has been cancelled</string>
     <string name="subscriptionError">Oops, something wrong happened</string>
+    <string name="required">field required</string>
 </resources>
